--- a/portfolio.html
+++ b/portfolio.html
@@ -68,7 +68,9 @@
             <li class="portfolio-list"> 
                     <a href="#" class="portfolio-links">
                     <img src="images/images2/img.jpg" alt="Macbook" class="card-image" >
-                      <div > 
+                    <!-- <div class="explanation"> <p> Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                    </div>-->
                             <p class="link-description">Технокряк</p>
                              <p class="card-content"> Веб-сайт</p>
                     </div>
