--- a/index.html
+++ b/index.html
@@ -40,7 +40,13 @@
     <main id="studio" >
         <section class="efective-solution">
             <h1>Эффективные решения <br> для вашего бизнеса</h1>
-            <button class="order-service">Заказать услугу</button>
+            <button class="order-service" data-modal-open >Заказать услугу</button>
+            <div class="backdrop is-hidden"data-modal>
+                <div class="modal">
+                    <button class="close-btn" data-modal-close>Закрыть модалку</button>
+                </div>
+
+            </div>
         </section>
         <div class="container">
             <ul class="dignities">
@@ -385,7 +391,7 @@
            </div>
        </div>
     </footer >
-
+   <script src="./js/modal.js"></script>
 </body>
 
 </html>
