--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
             <img src="./images/WebStudio.png" alt="logo">
             <ul class="nav-links">
                 <li><a href="index.html"> Студия </a></li>
-                <li><a href="portfolio.html">Портфолио </a></li>
+                <li id="portfolio-studio"><a href="portfolio.html">Портфолио </a></li>
                 <li><a href="#contacts"> Контакты</a></li>
             </ul>
             <ul class="nav-contacts">
