--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
            </div>
        </div>
     </footer >
-   <script src="./js/modal.js"></script>
+   <script src="./JS/modal.js"></script>
 </body>
 
 </html>
