changed svg adress

--- a/index.html
+++ b/index.html
@@ -40,12 +40,13 @@
     <main id="studio" >
         <section class="efective-solution">
             <h1>Эффективные решения <br> для вашего бизнеса</h1>
+            <!--Modal window-->
             <button class="order-service" data-modal-open >Заказать услугу</button>
             <div class="backdrop is-hidden" data-modal>
                         <div class="modal">
                             <button class="close-btn" data-modal-close>
                                 <svg class="svg-close">
-                                    <use href="../images/icons/symbol.svg#icon-Vector-1"></use>
+                                    <use href="./images/icons/symbol.svg#icon-Vector-1"></use>
                                 </svg>
                             </button>
                         </div>
