--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <div class="modal">
                             <button class="close-btn" data-modal-close>
                                 <svg class="svg-close">
-                                    <use href="/images/icons/symbol.svg#icon-Vector-1"></use>
+                                    <use href="./images/icons/symbol.svg#icon-Vector-1"></use>
                                 </svg>
                             </button>
                         </div>
@@ -397,7 +397,7 @@
            </div>
        </div>
     </footer >
-   <script src="./js/modal.js"></script>
+   <script src="./JS/modal.js"></script>
 </body>
 
 </html>
